Механизм обработки ошибок калибратора 5720 проверен

--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -172,7 +172,7 @@
     <None Include="packages.config" />
     <None Include="Resources\ACC\34401A.acc" />
     <None Include="Resources\ACC\Fluke 5522A.acc" />
-    <None Include="Resources\ACC\5720A.acc" />
+    <None Include="Resources\ACC\Fluke 5720A.acc" />
     <None Include="Resources\ACC\Fluke 9100.acc" />
     <None Include="Resources\ACC\Fluke 9500.acc" />
     <None Include="Resources\ACC\В7-40_1.acc" />
