--- a/Plugins/Keysight/34461A/34461A.csproj
+++ b/Plugins/Keysight/34461A/34461A.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{304A0F73-E573-4084-BFEC-6B757E7D5BB6}</ProjectGuid>
+    <ProjectGuid>{7F978717-840A-4871-B715-0450ED5ADE96}</ProjectGuid>
     <OutputType>library</OutputType>
-    <RootNamespace>Belvar_V7_40_1</RootNamespace>
-    <AssemblyName>Belvar_V7_40_1</AssemblyName>
+    <RootNamespace>_34461A</RootNamespace>
+    <AssemblyName>34461A</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -37,20 +37,15 @@
     </Reference>
     <Reference Include="Ivi.Visa, Version=5.8.0.0, Culture=neutral, PublicKeyToken=a128c98f1d7717c1, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Kelary.Ivi.Visa.5.11.3422\lib\net20\Ivi.Visa.dll</HintPath>
+      <HintPath>..\..\..\packages\Kelary.Ivi.Visa.5.11.3422\lib\net20\Ivi.Visa.dll</HintPath>
     </Reference>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NLog.4.7.3\lib\net45\NLog.dll</HintPath>
+    <Reference Include="NLog">
+      <HintPath>..\..\..\packages\NLog.4.7.3\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Transactions" />
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
+      <HintPath>..\..\..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -93,61 +88,36 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Include="Resource\Belvar_V7_40_1.dotx" />
-    <None Include="Resource\pointsV7-40_1.asmc" />
-    <None Include="Resource\V740_1_Oprobovanie.rtf" />
-    <None Include="Resource\V740_1_VisualTest.rtf" />
-    <None Include="Resource\точки поверки В7-40_1.xlsx" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\AP.Extension\AP.Extension.csproj">
+    <ProjectReference Include="..\..\..\AP.Extension\AP.Extension.csproj">
       <Project>{7208342f-bf11-4241-b032-30f196ce1a6c}</Project>
       <Name>AP.Extension</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\AP.Math\AP.Math.csproj">
-      <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
-      <Name>AP.Math</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\AP.Reports\AP.Reports.csproj">
+    <ProjectReference Include="..\..\..\AP.Reports\AP.Reports.csproj">
       <Project>{630EEDDE-FE14-4BA9-A2DA-7976F9BEE39A}</Project>
       <Name>AP.Reports</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\AP.Utils\AP.Utils.csproj">
+    <ProjectReference Include="..\..\..\AP.Utils\AP.Utils.csproj">
       <Project>{FF877F85-43B8-4779-A822-A2904ADC1100}</Project>
       <Name>AP.Utils</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\ASMC.Common\ASMC.Common.csproj">
+    <ProjectReference Include="..\..\..\ASMC.Common\ASMC.Common.csproj">
       <Project>{7FE244D8-06C9-4B0E-B2E5-7E92AC14E48D}</Project>
       <Name>ASMC.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\ASMC.Core\ASMC.Core.csproj">
+    <ProjectReference Include="..\..\..\ASMC.Core\ASMC.Core.csproj">
       <Project>{ADB547EB-33AA-4C07-A493-C80729632A8B}</Project>
       <Name>ASMC.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\ASMC.Data.Model\ASMC.Data.Model.csproj">
+    <ProjectReference Include="..\..\..\ASMC.Data.Model\ASMC.Data.Model.csproj">
       <Project>{F76E5DBB-5041-44C1-9194-6E92AF51B314}</Project>
       <Name>ASMC.Data.Model</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\ASMC.Devices\ASMC.Devices.csproj">
-      <Project>{C606FA94-0B7E-4698-801F-206CA9DA0CEF}</Project>
+    <ProjectReference Include="..\..\..\ASMC.Devices\ASMC.Devices.csproj">
+      <Project>{c606fa94-0b7e-4698-801f-206ca9da0cef}</Project>
       <Name>ASMC.Devices</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resource\Fluke 5522A_V7-40_Curr.jpg" />
-    <Resource Include="Resource\Fluke 5522A_V7-40_U_R.jpg" />
-    <Resource Include="Resource\Fluke 5720A_V7-40_Curr.jpg" />
-    <Resource Include="Resource\Fluke 5720A_V7-40_U_R.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resource\V7-40_Curr.jpg" />
-    <Resource Include="Resource\V7-40_U_R.jpg" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\" 2&gt; NUL
-mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\Resources\" 2&gt; NUL
-xcopy "$(TargetPath)" "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\" /Y
-xcopy "$(ProjectDir)Resource" "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\Resources\"/Y</PostBuildEvent>
-  </PropertyGroup>
 </Project>
