--- a/Plugins/Keysight/34461A/34461A.csproj
+++ b/Plugins/Keysight/34461A/34461A.csproj
@@ -94,6 +94,10 @@
       <Project>{7208342f-bf11-4241-b032-30f196ce1a6c}</Project>
       <Name>AP.Extension</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\AP.Math\AP.Math.csproj">
+      <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
+      <Name>AP.Math</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\AP.Reports\AP.Reports.csproj">
       <Project>{630EEDDE-FE14-4BA9-A2DA-7976F9BEE39A}</Project>
       <Name>AP.Reports</Name>
