34461 добавил поверяемые точки и делаю файл точности для мультиметра

--- a/Plugins/Keysight/34461A/34461A.csproj
+++ b/Plugins/Keysight/34461A/34461A.csproj
@@ -88,6 +88,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Resources\34461A_points.asmc" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\AP.Extension\AP.Extension.csproj">
@@ -123,5 +124,6 @@
       <Name>ASMC.Devices</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
