--- a/Plugins/Belvar_V7_40_1/Belvar_V7_40_1.csproj
+++ b/Plugins/Belvar_V7_40_1/Belvar_V7_40_1.csproj
@@ -95,6 +95,8 @@
     </None>
     <None Include="Resource\Belvar_V7_40_1.dotx" />
     <None Include="Resource\pointsV7-40_1.asmc" />
+    <None Include="Resource\V740_1_IsolationTest1.rtf" />
+    <None Include="Resource\V740_1_IsolationTest2.rtf" />
     <None Include="Resource\V740_1_Oprobovanie.rtf" />
     <None Include="Resource\V740_1_VisualTest.rtf" />
     <None Include="Resource\точки поверки В7-40_1.xlsx" />
