--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -116,6 +116,7 @@
     <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E363xADevices.cs" />
     <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E364xADevices.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\ICalibratorMultimeterFlukeBase.cs" />
+    <Compile Include="IEEE\PENDULUM\Pendulum CNT-90.cs" />
     <Compile Include="Interface\ICounter.cs" />
     <Compile Include="Interface\IDevice.cs" />
     <Compile Include="IEEE\Fluke\CalibtatorOscilloscope\Calibr_9500B.cs" />
@@ -136,6 +137,7 @@
     <Compile Include="IEEE\Keysight\PowerSupplyes\E36XX_IPowerSupply.cs" />
     <Compile Include="IEEE\Tektronix\Oscilloscope\TDS_Oscilloscope.cs" />
     <Compile Include="Interface\IMultimetr.cs" />
+    <Compile Include="Interface\IReferenceClock.cs" />
     <Compile Include="Interface\ISignalGenerator.cs" />
     <Compile Include="Interface\SourceAndMeter\IRangePhysicalQuantity.cs" />
     <Compile Include="Interface\SourceAndMeter\ISource_IMeter.cs" />
