сделал файл с точками поверки appa107_109

--- a/Plugins/APPA/APPA-107N-109N/APPA-107N-109NBasePlugin.csproj
+++ b/Plugins/APPA/APPA-107N-109N/APPA-107N-109NBasePlugin.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Resources\appa107_109.asmc" />
     <None Include="Resources\APPA_107N_109N.dotx" />
   </ItemGroup>
   <ItemGroup>
