переделал иерархию проекта ASMC.Device. Систематизировал папки

--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -104,79 +104,79 @@
   <ItemGroup>
     <Compile Include="DeviceInfo.cs" />
     <Compile Include="Helper.cs" />
-    <Compile Include="IEEE\Belvar_V7_40_1.cs" />
-    <Compile Include="IEEE\Fluke\Calibrator\Calibr_9100.cs" />
-    <Compile Include="IEEE\Fluke\Calibrator\Calib_5522A.cs" />
-    <Compile Include="IEEE\Fluke\Calibrator\Calib_5720A.cs" />
-    <Compile Include="IEEE\Keysight\Generator\81160A.cs" />
-    <Compile Include="IEEE\Keysight\Generator\SignalGeneratorTypes.cs" />
-    <Compile Include="IEEE\Keysight\Multimeter\BaseDigitalMultimetr344xx.cs" />
-    <Compile Include="IEEE\Keysight\Multimeter\IDigitalMultimetr344xx.cs" />
-    <Compile Include="IEEE\Keysight\Multimeter\KeysightMultimeters.cs" />
-    <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E363xADevices.cs" />
-    <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E364xADevices.cs" />
-    <Compile Include="IEEE\Fluke\Calibrator\ICalibratorMultimeterFlukeBase.cs" />
-    <Compile Include="IEEE\Counters\PENDULUM\CounterAbstract.cs" />
-    <Compile Include="IEEE\Counters\PENDULUM\CounterInputAbstract.cs" />
-    <Compile Include="IEEE\Counters\PENDULUM\Pendulum CNT-90.cs" />
-    <Compile Include="Interface\ICounter.cs" />
-    <Compile Include="Interface\IDevice.cs" />
-    <Compile Include="IEEE\Fluke\CalibtatorOscilloscope\Calibr_9500B.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Multimeter\BELVAR\Belvar_V7_40_1.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Calibrator\Fluke\ElectricCalibrator\Calibr_9100.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Calibrator\Fluke\ElectricCalibrator\Calib_5522A.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Calibrator\Fluke\ElectricCalibrator\Calib_5720A.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Generator\Keysight\81160A.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Generator\SignalGeneratorTypes.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Multimeter\Keysight\BaseDigitalMultimetr344xx.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Multimeter\Keysight\IDigitalMultimetr344xx.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Multimeter\Keysight\KeysightMultimeters.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\PowerSupplyes\Keysight\E36XXa\E363xADevices.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\PowerSupplyes\Keysight\E36XXa\E364xADevices.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Calibrator\Fluke\ElectricCalibrator\ICalibratorMultimeterFlukeBase.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Counters\CounterAbstract.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Counters\CounterInputAbstract.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Counters\PENDULUM\Pendulum CNT-90.cs" />
+    <Compile Include="ConceptualCode\ProgrammDeviceInterface\ICounter.cs" />
+    <Compile Include="ConceptualCode\ProgrammDeviceInterface\IDevice.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Calibrator\Fluke\CalibtatorOscilloscope\Calibr_9500B.cs" />
     <Compile Include="HelpDeviceBase.cs" />
-    <Compile Include="IEEE\IEEE_Base.cs" />
-    <Compile Include="IEEE\Keysight\ElectronicLoad\IElectronicLoad.cs" />
-    <Compile Include="IEEE\Keysight\ElectronicLoad\Main_N3300.cs" />
-    <Compile Include="IEEE\Keysight\ElectronicLoad\N3303A.cs" />
-    <Compile Include="IEEE\Keysight\ElectronicLoad\N3306A.cs" />
-    <Compile Include="IEEE\Keysight\Generator\E8257D.cs" />
-    <Compile Include="IEEE\Keysight\Multimeter\oldMult\Main_Mult.cs" />
-    <Compile Include="IEEE\Keysight\Multimeter\oldMult\Mult_34401A.cs" />
-    <Compile Include="IEEE\Keysight\Multimeter\oldMult\Mult_34460_61A.cs" />
-    <Compile Include="IEEE\Keysight\Multimeter\oldMult\Mult_34465_70A.cs" />
-    <Compile Include="IEEE\Fluke\Calibrator\CalibrMain.cs" />
-    <Compile Include="IEEE\Keysight\NoiseFigureAnalyzer\N8975A.cs" />
-    <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E36xxA_DeviceBasicFunction.cs" />
-    <Compile Include="IEEE\Keysight\PowerSupplyes\E36XX_IPowerSupply.cs" />
-    <Compile Include="IEEE\Tektronix\Oscilloscope\TDS_Oscilloscope.cs" />
-    <Compile Include="Interface\IMultimetr.cs" />
-    <Compile Include="Interface\IReferenceClock.cs" />
-    <Compile Include="Interface\ISignalGenerator.cs" />
-    <Compile Include="Interface\SourceAndMeter\IRangePhysicalQuantity.cs" />
-    <Compile Include="Interface\SourceAndMeter\ISource_IMeter.cs" />
-    <Compile Include="Model\RangeDeviceBase.cs" />
-    <Compile Include="Port\OWEN\OwenProtocol.cs" />
-    <Compile Include="Port\OWEN\TRM202Device.cs" />
-    <Compile Include="Port\APPA\Mult_107_109N.cs" />
-    <Compile Include="Port\ComPort.cs" />
-    <Compile Include="Port\IZ_Tech\MIT_8.cs" />
-    <Compile Include="Port\Profigrupp\B5-71-PRO\B5-71-PRO.cs" />
-    <Compile Include="Port\Profigrupp\B5-71-PRO\B571Pro1.cs" />
-    <Compile Include="Port\Profigrupp\B5-71-PRO\B571Pro2.cs" />
-    <Compile Include="Port\Profigrupp\B5-71-PRO\B571Pro4.cs" />
-    <Compile Include="Port\ZipNu4Pribor\Km300P.cs" />
+    <Compile Include="IEEE\HardWareInterfaceBaseCode\IEEE_Base.cs" />
+    <Compile Include="ConceptualCode\ProgrammDeviceInterface\IElectronicLoad.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\ElectronicLoad\Keysight\Main_N3300.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\ElectronicLoad\Keysight\N3303A.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\ElectronicLoad\Keysight\N3306A.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Generator\Keysight\E8257D.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Multimeter\Keysight\oldMult\Main_Mult.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Multimeter\Keysight\oldMult\Mult_34401A.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Multimeter\Keysight\oldMult\Mult_34460_61A.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Multimeter\Keysight\oldMult\Mult_34465_70A.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Calibrator\Fluke\ElectricCalibrator\CalibrMain.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\NoiseFigureAnalyzer\Keysight\N8975A.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\PowerSupplyes\Keysight\E36XXa\E36xxA_DeviceBasicFunction.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\PowerSupplyes\Keysight\E36XXa\E36XX_IPowerSupply.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Tektronix\Oscilloscope\TDS_Oscilloscope.cs" />
+    <Compile Include="ConceptualCode\ProgrammDeviceInterface\IMultimetr.cs" />
+    <Compile Include="ConceptualCode\ProgrammDeviceInterface\IReferenceClock.cs" />
+    <Compile Include="ConceptualCode\ProgrammDeviceInterface\ISignalGenerator.cs" />
+    <Compile Include="ConceptualCode\ProgrammDeviceInterface\SourceAndMeter\IRangePhysicalQuantity.cs" />
+    <Compile Include="ConceptualCode\ProgrammDeviceInterface\SourceAndMeter\ISource_IMeter.cs" />
+    <Compile Include="ConceptualCode\RangeDeviceBase.cs" />
+    <Compile Include="SerialPort\DeviceDriversCode\OWEN\OwenProtocol.cs" />
+    <Compile Include="SerialPort\DeviceDriversCode\OWEN\TRM202Device.cs" />
+    <Compile Include="SerialPort\DeviceDriversCode\APPA\Mult_107_109N.cs" />
+    <Compile Include="SerialPort\HardWareInterfaceBaseCode\ComPort.cs" />
+    <Compile Include="SerialPort\DeviceDriversCode\IZ_Tech\MIT_8.cs" />
+    <Compile Include="SerialPort\DeviceDriversCode\Profigrupp\B5-71-PRO\B5-71-PRO.cs" />
+    <Compile Include="SerialPort\DeviceDriversCode\Profigrupp\B5-71-PRO\B571Pro1.cs" />
+    <Compile Include="SerialPort\DeviceDriversCode\Profigrupp\B5-71-PRO\B571Pro2.cs" />
+    <Compile Include="SerialPort\DeviceDriversCode\Profigrupp\B5-71-PRO\B571Pro4.cs" />
+    <Compile Include="SerialPort\DeviceDriversCode\ZipNu4Pribor\Km300P.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rohde_Schwarz\RohdeSchwarz_RTMOscilloscope.cs" />
-    <Compile Include="Interface\IOscilloscope.cs" />
-    <Compile Include="Port\OWEN\TrmException.cs" />
-    <Compile Include="USB_Device\SKBIS\Lir917\Driver.cs" />
-    <Compile Include="USB_Device\SiliconLabs\UsbExpressWrapper.cs" />
-    <Compile Include="USB_Device\SiliconLabs\Exception.cs" />
-    <Compile Include="USB_Device\SKBIS\Lir917\Ppi.cs" />
-    <Compile Include="USB_Device\WebCam\WebCam.cs" />
-    <Compile Include="WithoutInterface\HourIndicator\IchBase.cs" />
-    <Compile Include="WithoutInterface\HourIndicator\IchGost577\IchGost577.cs" />
-    <Compile Include="WithoutInterface\HourIndicator\IchGost577\Ich_02.cs" />
-    <Compile Include="WithoutInterface\HourIndicator\IchGost577\Ich_03.cs" />
-    <Compile Include="WithoutInterface\HourIndicator\IchGost577\Ich_10.cs" />
-    <Compile Include="WithoutInterface\HourIndicator\IchGost577\Ich_10_03_02.cs" />
-    <Compile Include="WithoutInterface\HourIndicator\MC52415_13\MC52415_13.cs" />
-    <Compile Include="WithoutInterface\Voltmetr\B3_57.cs" />
+    <Compile Include="IEEE\DeviceDriversCode\Rohde_Schwarz\RohdeSchwarz_RTMOscilloscope.cs" />
+    <Compile Include="ConceptualCode\ProgrammDeviceInterface\IOscilloscope.cs" />
+    <Compile Include="SerialPort\DeviceDriversCode\OWEN\TrmException.cs" />
+    <Compile Include="OtherUSB_Device\SKBIS\Lir917\Driver.cs" />
+    <Compile Include="OtherUSB_Device\SiliconLabs\UsbExpressWrapper.cs" />
+    <Compile Include="OtherUSB_Device\SiliconLabs\Exception.cs" />
+    <Compile Include="OtherUSB_Device\SKBIS\Lir917\Ppi.cs" />
+    <Compile Include="OtherUSB_Device\WebCam\WebCam.cs" />
+    <Compile Include="WithoutHardWareInterface\HourIndicator\IchBase.cs" />
+    <Compile Include="WithoutHardWareInterface\HourIndicator\IchGost577\IchGost577.cs" />
+    <Compile Include="WithoutHardWareInterface\HourIndicator\IchGost577\Ich_02.cs" />
+    <Compile Include="WithoutHardWareInterface\HourIndicator\IchGost577\Ich_03.cs" />
+    <Compile Include="WithoutHardWareInterface\HourIndicator\IchGost577\Ich_10.cs" />
+    <Compile Include="WithoutHardWareInterface\HourIndicator\IchGost577\Ich_10_03_02.cs" />
+    <Compile Include="WithoutHardWareInterface\HourIndicator\MC52415_13\MC52415_13.cs" />
+    <Compile Include="WithoutHardWareInterface\Voltmetr\B3_57.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Port\OWEN\ki_parametry_trm202_105_a3.pdf" />
-    <None Include="Port\OWEN\opisanie_biblioteki_owenionet.pdf" />
+    <None Include="SerialPort\DeviceDriversCode\OWEN\ki_parametry_trm202_105_a3.pdf" />
+    <None Include="SerialPort\DeviceDriversCode\OWEN\opisanie_biblioteki_owenionet.pdf" />
     <None Include="packages.config" />
     <None Include="Resources\ACC\34401A.acc" />
     <None Include="Resources\ACC\34461A.acc" />
@@ -185,11 +185,9 @@
     <None Include="Resources\ACC\Fluke 9100.acc" />
     <None Include="Resources\ACC\Fluke 9500.acc" />
     <None Include="Resources\ACC\В7-40_1.acc" />
-    <None Include="USB_Device\SiliconLabs\AN169.pdf" />
+    <None Include="OtherUSB_Device\SiliconLabs\AN169.pdf" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="IEEE\Fluke\Multimeter\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\AP.Extension\AP.Extension.csproj">
       <Project>{7208342F-BF11-4241-B032-30F196CE1A6C}</Project>
