Работа идет по плану...

--- a/Plugins/CNT-90/CNT-90.csproj
+++ b/Plugins/CNT-90/CNT-90.csproj
@@ -60,7 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
-    <Compile Include="Operation.cs" />
+    <Compile Include="StageTestingOfDevice.cs" />
     <Compile Include="Procedures.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
