рефакторинг. Начало сереализации

--- a/ASMC.Core/packages.config
+++ b/ASMC.Core/packages.config
@@ -4,6 +4,7 @@
   <package id="Extended.Wpf.Toolkit" version="4.0.1" targetFramework="net462" />
   <package id="FastMember" version="1.5.0" targetFramework="net462" />
   <package id="Fluent.Ribbon" version="6.1.0.326" targetFramework="net45" requireReinstallation="true" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
   <package id="NLog" version="4.7.3" targetFramework="net462" />
   <package id="NLog.Config" version="4.7.3" targetFramework="net462" />
   <package id="NLog.Schema" version="4.7.3" targetFramework="net462" />
