--- a/Plugins/CNT-90/app.config
+++ b/Plugins/CNT-90/app.config
@@ -14,6 +14,10 @@
         <assemblyIdentity name="ExcelNumberFormat" publicKeyToken="23c6f5d73be07eca" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.10.0" newVersion="1.0.10.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
